# RCaesar

./: .clang-tidy  .gitignore  LICENSE  README.md  build.ps1  test-group-request.json  test-request-3.json
backend/: CMakeLists.txt  main-websocket-server.cpp  main.cpp  test-request.json  test-send.json
backend/caesars/: type0.h  type1.h  type2.h  type3.h  type4.h  type5.h  type6.h  type7.h
backend/example-jsons/: encrypt-type2.json  encrypt-type3.json
backend/utils/: Base64Decoder.h  CaesarStatus.h  ColorTextManager.cpp  ColorTextManager.h  ErrorHandler.h  Exceptions.h  Feature.cpp  Feature.h  InteractiveTerminal.h  RequestParser.h  WroteRegistry.h  defs.cpp  defs.h  utils.h  wait.h
frontend/rcaesar-frontend/: package-lock.json  package.json
frontend/rcaesar-frontend/src/: App.tsx
